Removed 'ASSIGNMENT' from .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-ASSIGNMENT
-ASSIGNMENT\ 24-25 
-LAB\ WORK\ ARRAY\ ADT  
-SHRIPAD\ K
-Stack\ parathesis\ M  
-Stack(Using\ Linked\ List)-20241006
-ZIP\ FILe  
-file\ handling
+ASSIGNMENT 24-25/
+LAB WORK ARRAY ADT/
+SHRIPAD K/
+Stack parathesis M/
+Stack(Using Linked List)-20241006/
+ZIP FILe/
+file handling/
